zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__search_floating_tab_nothing_highlighted.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌ Pane #1 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
01 (C): │                                                                                                                       │
02 (C): │                                                                                                                       │
03 (C): │                                                                                                                       │
04 (C): │                                                                                                                       │
05 (C): │                             ┌ fish /home/thomas/Projects/zellij ──────── 0/289 | PIN ○ ┐                              │
06 (C): │                             │d viverra tellus in hac habitasse. Nunc scelerisque viverr│                              │
07 (C): │                             │a mauris in aliquam sem fringilla.                        │                              │
08 (C): │                             │⏎                                                         │                              │
09 (C): │                             │                                                          │                              │
10 (C): │                             │                                                          │                              │
11 (C): │                             │zellij on  mouse-support [?] is 📦 v0.14.0 via 🦀 v1.53.0│                              │
12 (C): │                             │-beta.3                                                   │                              │
13 (C): │                             │❯                                                         │                              │
14 (C): │                             └──────────────────────────────────────────────────────────┘                              │
15 (C): │                                                                                                                       │
16 (C): │                                                                                                                       │
17 (C): │                                                                                                                       │
18 (C): │                                                                                                                       │
19 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
