zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__set_and_clear_highlights_across_tiled_and_floating.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌ Pane #1 ──────────────────────────────────────────────────┐┌ Pane #2 ─────────────────────────────────────────────────┐
01 (C): │aaa bbb                                                    ││aaa bbb                                                   │
02 (C): │                                                           ││                                                          │
03 (C): │                                                           ││                                                          │
04 (C): │                                                           ││                                                          │
05 (C): │                             ┌ Pane #3 ────────────────────────────────────────── PIN ○ ┐                              │
06 (C): │                             │aaa bbb                                                   │                              │
07 (C): │                             │                                                          │                              │
08 (C): │                             │                                                          │                              │
09 (C): │                             │                                                          │                              │
10 (C): │                             │                                                          │                              │
11 (C): │                             │                                                          │                              │
12 (C): │                             │                                                          │                              │
13 (C): │                             │                                                          │                              │
14 (C): │                             └──────────────────────────────────────────────────────────┘                              │
15 (C): │                                                           ││                                                          │
16 (C): │                                                           ││                                                          │
17 (C): │                                                           ││                                                          │
18 (C): │                                                           ││                                                          │
19 (C): └───────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
