zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__swap_floating_layouts_including_command_panes_absent_from_existing_layout.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 9237
expression: snapshot
---
00 (C): ┌ Pane #2 ──────────────────────────────────────── PIN [ ] ┐────────────────────────────────────────────────────────────┐
01 (C): │                                                          │                                                            │
02 (C): │                                                          │                                                            │
03 (C): │                                                          │                                                            │
04 (C): │                                                          │                                                            │
05 (C): │                             ┌ vc-frame:status-bar ──────────────────────────── PIN [ ] ┐                              │
06 (C): │                             │I am a                                                    │                              │
07 (C): │                             │status bar                                                │ ┐                            │
08 (C): │                             │                                                          │ │                            │
09 (C): └─────────────────────────────│                                                          │ ] ┐                          │
10 (C): │         ┌ Pane #3 ──────────│                                                          │   │                          │
11 (C): │         │                   │                                                          │   │                          │
12 (C): │         │                   │                                                          │   │                          │
13 (C): │         │                   │                                                          │   │                          │
14 (C): │         │                   └──────────────────────────────────────────────────────────┘   │                          │
15 (C): │         │                     │ │                                                          │                          │
16 (C): │         │                     └─│                                                          │                          │
17 (C): │         │                       │                                                          │                          │
18 (C): │         │                       └──────────────────────────────────────────────────────────┘                          │
19 (C): └─────────└──────────────────────────────────────────────────────────┘──────────────────────────────────────────────────┘

