zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__swap_floating_layouts_not_including_command_panes_present_in_existing_layout.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌ Pane #1 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
01 (C): │                                                                                                                       │
02 (C): │ ┌ command2 ────── SCROLL:  0/1 | PIN ○ ┐                                                                              │
03 (C): │ │      Waiting to run: command2        │                                                                              │
04 (C): │ │ ┌ vc-frame:tab-bar ───────────── PIN ○ ┐                                                                            │
05 (C): │ │<│I am a tab bar           ┌ vc-frame:status-bar ────────────────────────────── PIN ○ ┐                              │
06 (C): │ │l│                         │I am a                                                    │                              │
07 (C): │ └─│                         │status bar                                                │ ┐                            │
08 (C): │   │                         │                                                          │ │                            │
09 (C): │   └─────────────────────────│                                                          │ ○ ┐                          │
10 (C): │                             │                                                          │   │                          │
11 (C): │                             │                                                          │   │                          │
12 (C): │                             │                                                          │   │                          │
13 (C): │                             │                                                          │   │                          │
14 (C): │                             └──────────────────────────────────────────────────────────┘   │                          │
15 (C): │                               │ │                                                          │                          │
16 (C): │                               └─│                                                          │                          │
17 (C): │                                 │                                                          │                          │
18 (C): │                                 └──────────────────────────────────────────────────────────┘                          │
19 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
