zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__swap_floating_layouts_not_including_plugin_panes_present_in_existing_layout.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌ Pane #1 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
01 (C): │                                                                                                                       │
02 (C): │                                                                                                                       │
03 (C): │                                                                                                                       │
04 (C): │                                                                                                                       │
05 (C): │                             ┌ vc-frame:tab-bar ───────────────────────────────── PIN ○ ┐                              │
06 (C): │                             │I am a tab bar                                            │                              │
07 (C): │                             │ ┌ Pane #2 ────────────────────────────────────────── PIN ○ ┐                            │
08 (C): │                             │ │                                                          │                            │
09 (C): │                             │ │ ┌ vc-frame:status-bar ────────────────────────────── PIN ○ ┐                          │
10 (C): │                             │ │ │I am a                                                    │                          │
11 (C): │                             │ │ │status bar                                                │                          │
12 (C): │                             │ │ │                                                          │                          │
13 (C): │                             │ │ │                                                          │                          │
14 (C): │                             └─│ │                                                          │                          │
15 (C): │                               │ │                                                          │                          │
16 (C): │                               └─│                                                          │                          │
17 (C): │                                 │                                                          │                          │
18 (C): │                                 └──────────────────────────────────────────────────────────┘                          │
19 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
